# fuel-gasless-nfts

./: Cargo.toml  Forc.toml  README.md
frontend/: deploy.ts  fuels.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/deploy/: route.ts
frontend/src/app/page/: page.tsx
frontend/src/components/: MainUI.tsx
frontend/src/contracts/: GasPredicateAbi.d.ts  GasPredicateAbi.hex.ts  NftAbi.d.ts  NftAbi.hex.ts  NftScriptAbi.d.ts  NftScriptAbi.hex.ts  OwnerPredicateAbi.d.ts  OwnerPredicateAbi.hex.ts  PacketMinterAbi.d.ts  PacketMinterAbi.hex.ts  PacketPredicateAbi.d.ts  PacketPredicateAbi.hex.ts  common.d.ts  index.ts
frontend/src/contracts/factories/: GasPredicateAbi__factory.ts  NftAbi__factory.ts  NftScriptAbi__factory.ts  OwnerPredicateAbi__factory.ts  PacketMinterAbi__factory.ts  PacketPredicateAbi__factory.ts
frontend/src/pages/: index.tsx
frontend/src/pages/api/: sign.ts
gas_predicate/: Forc.toml
gas_predicate/src/: main.sw
integration_tests/: Cargo.toml
integration_tests/tests/: harness.rs
integration_tests/tests/utils/: mod.rs
nft/: Forc.toml
nft/src/: main.sw
nft_script/: Forc.toml
nft_script/src/: main.sw
owner_predicate/: Forc.toml
packet_minter/: Cargo.toml  Forc.toml
packet_minter/src/: main.sw
packet_minter/tests/: harness.rs
packet_predicate/: Cargo.toml  Forc.toml
packet_predicate/src/: main.sw
packet_predicate/tests/: harness.rs
shared/: Forc.toml
shared/src/: lib.sw
tests/: harness.rs
