[package]
name = "gasless_nft"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["dmihal <david@dmihal.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { workspace = true, features = ["fuel-core-lib"] }
tokio = { workspace = true, features = ["rt", "macros"] }
sha2 = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
