[package]
name = "packet_minter"
version = "0.1.0"
edition = "2021"
authors = ["dmihal <david@dmihal.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { workspace = true, features = ["fuel-core-lib"] }
tokio = { workspace = true, features = ["rt", "macros"] }
sha2 = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
